# CS537

./: README.md
p1a/: README.md  badinput  fastsort  fastsort.c  fastsort.c~  goodinput  goodinput2  pointer  pointer.c  qsort  qsort.c  spacyinput  struct  struct.c
p1a/ctutorial/: a.out  hw  hw.c
p2a/: .__afs706B  .__afsC394  .__afsF0E5  README.md
p2a/1/: mysh  mysh.c~  parse  strtok.c  whoosh  whoosh.c
p2a/2/: lsoutput.txt  makefile  mysh  mysh.c~  notes  output2  output3  parse.c  parse.c~  pwd.txt  strtok  strtok.c~  test_output  whoosh  whoosh.c
p2a/badexec/: err
p2b/: README.md
p2b/2/: notes  output2  output3  runme
p2b/3/: output
p3/: README.md  mem.h  shang_code.tgz
p3/1/: Makefile  mem  mem.c  mem.c~  psize  tester  tester.c  tester.c~
p3/2/: mem.c  mem.c~  psize.c  tester  tester.c  tester.c~
p3/quan_code/: CMakeLists.txt  Makefile  mem.c  tester
p3/quan_code2/: Makefile  mem.c  mem.h  p3-03-11.tgz  tester  tester.c
p4a/: README.md  p4a.tgz
p4a/1/: Makefile  SHANG-pageb  SHANG-pagec  crawler.c  file_tester  file_tester.c  hash  parse  web_tester  web_tester.c
p4a/2/: Makefile  SHANG-pagea  SHANG-paged  busywait  busywait.c  busywait_strace  crawler.c  file_tester  file_tester.c  ha  ha.c  ha.h  index.txt  mytest  page1-a.txt  page4.txt  parse.c  web_tester
p4a/TRUNK/: mytest  (+9 more)
p4b/: 3.tgz  README.md  notes
p5a/: README.md  fs.img  output
p5b/: README.md  xv6.p5.tgz
p5b/proj/: CMakeLists.txt
p5b/proj/include/: stat.h
p5b/proj/kernel/: file.c  fs.c  sysfile.c  sysfile.c.old
p5b/proj/user/: hello.c  makefile.mk  read.c  remove.c  write3.c  write4.c
(+186 files in other folders)
